# cowin-notifier

./: Cargo.toml  LICENSE  README.md
.github/workflows/: crossbuilder.yaml  releaser.yaml
src/: center.rs  db.rs  district.rs  main.rs  network.rs  notification.rs  state.rs
test_data/: center_response.json  db_notifs.json
