[package]
name = "cowin-notifier"
version = "0.1.0"
authors = ["Sanskar Jaiswal <jaiswalsanskar078@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
anyhow = "1.0.4"
